; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_route.c_sin6_get_embedded_ifscope.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_route.c_sin6_get_embedded_ifscope.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockaddr = type { i32 }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sockaddr*)* @sin6_get_embedded_ifscope to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sin6_get_embedded_ifscope(%struct.sockaddr* %0) #0 {
  %2 = alloca %struct.sockaddr*, align 8
  store %struct.sockaddr* %0, %struct.sockaddr** %2, align 8
  %3 = load %struct.sockaddr*, %struct.sockaddr** %2, align 8
  %4 = call i32 @ASSERT_SIN6IFSCOPE(%struct.sockaddr* %3)
  %5 = load %struct.sockaddr*, %struct.sockaddr** %2, align 8
  %6 = call %struct.TYPE_4__* @SIN6(%struct.sockaddr* %5)
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %9 = load i32*, i32** %8, align 8
  %10 = getelementptr inbounds i32, i32* %9, i64 1
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @ntohs(i32 %11)
  ret i32 %12
}

declare dso_local i32 @ASSERT_SIN6IFSCOPE(%struct.sockaddr*) #1

declare dso_local i32 @ntohs(i32) #1

declare dso_local %struct.TYPE_4__* @SIN6(%struct.sockaddr*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
